# libavbridge

./: .gitignore  CMakeLists.txt  README.md
examples/: CMakeLists.txt  capabilities.cpp  decode_audio.cpp  decode_video.cpp  probe_media.cpp  transcode.cpp
include/: avbridge.h
src/: avb_backend.cpp  avb_backend.hpp  avb_capability_common.hpp  avb_context.cpp  avb_context.hpp  avb_decoder.cpp  avb_decoder.hpp  avb_decoder_capabilities.cpp  avb_decoder_impl.cpp  avb_decoder_impl.hpp  avb_decoder_validation.cpp  avb_encoder.cpp  avb_encoder.hpp  avb_encoder_backend.hpp  avb_encoder_capabilities.cpp  avb_encoder_impl.hpp  avb_encoder_validation.cpp  avb_error.cpp  avb_probe.cpp  avb_runtime_capabilities.cpp  avb_video_codec_registry.cpp  avb_video_codec_registry.hpp
src/backends/avfoundation/: avb_backend_avfoundation.hh  avb_backend_avfoundation.mm  avb_decoder_avfoundation.hh  avb_decoder_avfoundation.mm  avb_encoder_avfoundation.hh  avb_encoder_avfoundation.mm
src/backends/ffmpeg/: avb_backend_ffmpeg.cpp  avb_backend_ffmpeg.hpp  avb_decoder_ffmpeg.cpp  avb_decoder_ffmpeg.hpp  avb_encoder_ffmpeg.cpp  avb_encoder_ffmpeg.hpp  avb_ffmpeg_loader.cpp  avb_ffmpeg_loader.hpp
src/backends/gstreamer/: avb_backend_gstreamer.cpp  avb_backend_gstreamer.hpp  avb_decoder_gstreamer.cpp  avb_decoder_gstreamer.hpp  avb_encoder_gstreamer.cpp  avb_encoder_gstreamer.hpp  avb_gstreamer_loader.cpp  avb_gstreamer_loader.hpp
src/backends/mediafoundation/: avb_backend_mediafoundation.cpp  avb_backend_mediafoundation.hpp  avb_decoder_mediafoundation.cpp  avb_decoder_mediafoundation.hpp  avb_encoder_mediafoundation.cpp  avb_encoder_mediafoundation.hpp
tests/: CMakeLists.txt  codecs.cpp  conformance.cpp  custom_decoder.cpp  custom_encoder.cpp  dmabuf_roundtrip.cpp  io.cpp  roundtrip.cpp
